# quadCopter

./: .gitignore  CMakeLists.txt  ChangeLog  README.md
include/: quadCopter.h  quad_IMU.h  quad_Motor.h  quad_MotorManager.h  quad_MotorScheduler.h  quad_PID.h  quad_PIDPitch.h  quad_PIDRoll.h  quad_PIDYaw.h
src/: CMakeLists.txt  main.cpp  quadCopter.cpp  quad_IMU.cpp  quad_Motor.cpp  quad_MotorManager.cpp  quad_MotorScheduler.cpp  quad_PIDPitch.cpp  quad_PIDRoll.cpp  quad_PIDYaw.cpp
