cmake_minimum_required(VERSION 2.8)

PROJECT(quadCopter)

## Default install prefix : /usr
SET(CMAKE_INSTALL_PREFIX /usr)
option(CMAKE_INSTALL_PREFIX "CMAKE_INSTALL_PREFIX" ${CMAKE_INSTALL_PREFIX})

## Default build type : REALEASE
IF (CMAKE_BUILD_TYPE STREQUAL "")
	SET(CMAKE_BUILD_TYPE RELEASE)
ENDIF (CMAKE_BUILD_TYPE STREQUAL "")


INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )

SET(EXECUTABLE_OUTPUT_PATH "${quadCopter_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${quadCopter_BINARY_DIR}/lib")


#ADD_SUBDIRECTORY(include)
INCLUDE_DIRECTORIES( include )
ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(data)

